--- a/DHSC.ANS.API.Consumer.Docs/output/404.html
+++ b/DHSC.ANS.API.Consumer.Docs/output/404.html
@@ -96,7 +96,9 @@
         <nav id="toc" class="js-toc-list toc__list" aria-labelledby="toc-heading">
         <ul class="table-of-contents">
                     <li class="toc-level-1">
-                        <a href="#page-not-found"><span>Page not found</span></a>
+                        <a href="#page-not-found">
+                            <span>Page not found</span>
+                        </a>
                     </li>
         </ul>
         </nav>
