--- a/DHSC.ANS.API.Consumer.Docs/output/accessibility.html
+++ b/DHSC.ANS.API.Consumer.Docs/output/accessibility.html
@@ -96,25 +96,46 @@
         <nav id="toc" class="js-toc-list toc__list" aria-labelledby="toc-heading">
         <ul class="table-of-contents">
                     <li class="toc-level-1">
-                        <a href="#accessibility-statement-for-gov.uk-content-api-documentation"><span>Accessibility statement for GOV.UK Content API documentation</span></a>
+                        <a href="#accessibility-statement-for-gov.uk-content-api-documentation">
+                            <span>Accessibility statement for GOV.UK Content API documentation</span>
+                        </a>
         <ul class="table-of-contents">
                     <li class="toc-level-2">
-                        <a href="#how-accessible-this-website-is"><span>How accessible this website is</span></a>
+                        <a href="#how-accessible-this-website-is">
+                            <span>How accessible this website is</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#feedback-and-contact-information"><span>Feedback and contact information</span></a>
+                        <a href="#feedback-and-contact-information">
+                            <span>Feedback and contact information</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#reporting-accessibility-problems-with-this-website"><span>Reporting accessibility problems with this website</span></a>
+                        <a href="#reporting-accessibility-problems-with-this-website">
+                            <span>Reporting accessibility problems with this website</span>
+                        </a>
+        <ul class="table-of-contents">
+                    <li class="toc-level-3">
+                        <a href="#enforcement-procedure">
+                            <span>Enforcement procedure</span>
+                        </a>
+                    </li>
+        </ul>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#technical-information-about-this-websites-accessibility"><span>Technical information about this website&#x2019;s accessibility</span></a>
+                        <a href="#technical-information-about-this-websites-accessibility">
+                            <span>Technical information about this website&#x2019;s accessibility</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#non-compliance-with-the-accessibility-regulations"><span>Non-compliance with the accessibility regulations</span></a>
+                        <a href="#non-compliance-with-the-accessibility-regulations">
+                            <span>Non-compliance with the accessibility regulations</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#preparation-of-this-accessibility-statement"><span>Preparation of this accessibility statement</span></a>
+                        <a href="#preparation-of-this-accessibility-statement">
+                            <span>Preparation of this accessibility statement</span>
+                        </a>
                     </li>
         </ul>
                     </li>
