--- a/DHSC.ANS.API.Consumer.Docs/output/getting-started.html
+++ b/DHSC.ANS.API.Consumer.Docs/output/getting-started.html
@@ -96,33 +96,51 @@
         <nav id="toc" class="js-toc-list toc__list" aria-labelledby="toc-heading">
         <ul class="table-of-contents">
                     <li class="toc-level-1">
-                        <a href="#getting-started"><span>Getting Started</span></a>
+                        <a href="#getting-started">
+                            <span>Getting Started</span>
+                        </a>
         <ul class="table-of-contents">
                     <li class="toc-level-2">
-                        <a href="#accessing-content"><span>Accessing Content</span></a>
+                        <a href="#accessing-content">
+                            <span>Accessing Content</span>
+                        </a>
         <ul class="table-of-contents">
                     <li class="toc-level-3">
-                        <a href="#base-path"><span>Base path</span></a>
+                        <a href="#base-path">
+                            <span>Base path</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#document-type-and-schema-name"><span>Document type and schema name</span></a>
+                        <a href="#document-type-and-schema-name">
+                            <span>Document type and schema name</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#details"><span>Details</span></a>
+                        <a href="#details">
+                            <span>Details</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#links"><span>Links</span></a>
+                        <a href="#links">
+                            <span>Links</span>
+                        </a>
                     </li>
         </ul>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#making-use-of-content"><span>Making use of content</span></a>
+                        <a href="#making-use-of-content">
+                            <span>Making use of content</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#content-that-spans-multiple-pages"><span>Content that spans multiple pages</span></a>
+                        <a href="#content-that-spans-multiple-pages">
+                            <span>Content that spans multiple pages</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#withdrawn-content"><span>Withdrawn content</span></a>
+                        <a href="#withdrawn-content">
+                            <span>Withdrawn content</span>
+                        </a>
                     </li>
         </ul>
                     </li>
