--- a/DHSC.ANS.API.Consumer.Docs/output/index.html
+++ b/DHSC.ANS.API.Consumer.Docs/output/index.html
@@ -96,70 +96,117 @@
         <nav id="toc" class="js-toc-list toc__list" aria-labelledby="toc-heading">
         <ul class="table-of-contents">
                     <li class="toc-level-1">
-                        <a href="#dhsc-hsa4-form-submission-api"><span>DHSC HSA4 Form Submission API</span></a>
+                        <a href="#dhsc-hsa4-form-submission-api">
+                            <span>DHSC HSA4 Form Submission API</span>
+                        </a>
         <ul class="table-of-contents">
                     <li class="toc-level-2">
-                        <a href="#what-you-can-do-with-this-api"><span>What you can do with this API</span></a>
+                        <a href="#what-you-can-do-with-this-api">
+                            <span>What you can do with this API</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#what-you-cant-do-with-this-api"><span>What you can&#x27;t do with this API</span></a>
+                        <a href="#what-you-cant-do-with-this-api">
+                            <span>What you can&#x27;t do with this API</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#quick-start"><span>Quick Start</span></a>
+                        <a href="#quick-start">
+                            <span>Quick Start</span>
+                        </a>
         <ul class="table-of-contents">
                     <li class="toc-level-3">
-                        <a href="#test-environment"><span>Test Environment</span></a>
+                        <a href="#test-environment">
+                            <span>Test Environment</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#making-a-submission"><span>Making a Submission</span></a>
+                        <a href="#making-a-submission">
+                            <span>Making a Submission</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#checking-submission-status"><span>Checking Submission Status</span></a>
+                        <a href="#checking-submission-status">
+                            <span>Checking Submission Status</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#important"><span>Important</span></a>
+                        <a href="#important">
+                            <span>Important</span>
+                        </a>
                     </li>
         </ul>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#alpha-software"><span>Alpha Software</span></a>
+                        <a href="#alpha-software">
+                            <span>Alpha Software</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#authentication"><span>Authentication</span></a>
+                        <a href="#authentication">
+                            <span>Authentication</span>
+                        </a>
         <ul class="table-of-contents">
                     <li class="toc-level-3">
-                        <a href="#obtaining-access"><span>Obtaining Access</span></a>
+                        <a href="#obtaining-access">
+                            <span>Obtaining Access</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#obtaining-a-bearer-token"><span>Obtaining a Bearer Token</span></a>
+                        <a href="#obtaining-a-bearer-token">
+                            <span>Obtaining a Bearer Token</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#making-authenticated-requests"><span>Making Authenticated Requests</span></a>
+                        <a href="#making-authenticated-requests">
+                            <span>Making Authenticated Requests</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#important-1"><span>Important</span></a>
+                        <a href="#important-1">
+                            <span>Important</span>
+                        </a>
                     </li>
         </ul>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#security-and-compliance"><span>Security and Compliance</span></a>
+                        <a href="#security-and-compliance">
+                            <span>Security and Compliance</span>
+                        </a>
         <ul class="table-of-contents">
                     <li class="toc-level-3">
-                        <a href="#reporting-vulnerabilities"><span>Reporting Vulnerabilities</span></a>
+                        <a href="#reporting-vulnerabilities">
+                            <span>Reporting Vulnerabilities</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#https"><span>HTTPS</span></a>
+                        <a href="#https">
+                            <span>HTTPS</span>
+                        </a>
                     </li>
                     <li class="toc-level-3">
-                        <a href="#security-patches"><span>Security Patches</span></a>
+                        <a href="#security-patches">
+                            <span>Security Patches</span>
+                        </a>
                     </li>
         </ul>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#rate-limiting"><span>Rate Limiting</span></a>
+                        <a href="#rate-limiting">
+                            <span>Rate Limiting</span>
+                        </a>
                     </li>
                     <li class="toc-level-2">
-                        <a href="#support"><span>Support</span></a>
+                        <a href="#support">
+                            <span>Support</span>
+                        </a>
+        <ul class="table-of-contents">
+                    <li class="toc-level-3">
+                        <a href="#additional-resources">
+                            <span>Additional Resources</span>
+                        </a>
+                    </li>
+        </ul>
                     </li>
         </ul>
                     </li>
